# cudabitshuffle

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md
common/include/: common.hpp
include/: cudabitshuffle.hpp
src/: bitshuffle.cu  cuda_utils.cu  cudabitshuffle.cc  cudabitshuffle.cu  nv_decompress.cu
